<resources>
    <string name="app_name">FinalIceCream</string>
    <string name="heading_textview">I Scream for Ice Cream</string>
    <string name="treatme_button">Treat Me</string>
    <string name="result_textview"></string>

    <!--Edit Text-->
    <string name="icecream_name">Name your treat</string>
    <string name="dairyfree_switch">Dairy-free</string>

    <!--Toggle-->
    <string name="toggle_on">Cup</string>
    <string name="toggle_off">Scoop</string>

    <!--Radio Buttons-->
    <string name="icecream_radiobutton1">ice cream</string>
    <string name="frozenyogurt_radiobutton2">frozen yogurt</string>
    <string name="gelato_radiobutton4">gelato</string>

    <!--Checkboxes-->
    <string name="sprinkles_checkbox">sprinkles</string>
    <string name="hotfudge_checkbox">hot fudge</string>
    <string name="nuts_checkbox">nuts</string>

    <!--Spinner-->
    <string-array name="ice_cream">
        <item>Death by Chocolate</item>
        <item>Salted Caramel</item>
        <item>Cookies and Cream</item>
    </string-array>

    <!--Find Trea button-->
    <string name="findtreat_button">Find Treat</string>
</resources>
