<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_find_ice_cream"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.angellam.finalicecream.FindIceCreamActivity">

    <!--Heading-->
    <TextView
        android:text="@string/heading_textview"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/headingTextView" />

    <Button
        android:text="@string/treatme_button"
        android:onClick="onTreatMeButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/treatMeButton" />

    <!--Result-->
    <TextView
        android:text="@string/result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/treatMeButton"
        android:layout_marginTop="28dp"
        android:id="@+id/iceCreamResultTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:entries="@array/ice_cream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headingTextView"
        android:layout_marginTop="43dp"
        android:id="@+id/spinner"
        android:layout_alignRight="@+id/nameTreatEditText"
        android:layout_alignEnd="@+id/nameTreatEditText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iceCreamImageView"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/iceCreamResultTextView"
        android:layout_toRightOf="@+id/treatMeButton"
        android:layout_toEndOf="@+id/treatMeButton" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/icecream_name"
        android:ems="10"
        android:layout_below="@+id/headingTextView"
        android:layout_alignRight="@+id/treatMeButton"
        android:layout_alignEnd="@+id/treatMeButton"
        android:id="@+id/nameTreatEditText" />

    <Switch
        android:text="@string/dairyfree_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTreatEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/dairyfreeSwitch" />

    <ToggleButton
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dairyfreeSwitch"
        android:layout_alignRight="@+id/dairyfreeSwitch"
        android:layout_alignEnd="@+id/dairyfreeSwitch"
        android:id="@+id/cupScoopToggleButton" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/cupScoopToggleButton"
        android:id="@+id/treatTypeRadioGroup">
        <RadioButton
            android:text="@string/icecream_radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/iceCreamRadioButton1" />

        <RadioButton
            android:text="@string/frozenyogurt_radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/frozenYogurtRadioButton2" />

        <RadioButton
            android:text="@string/gelato_radiobutton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/gelatoRadioButton3" />
    </RadioGroup>

    <CheckBox
        android:text="@string/sprinkles_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/treatMeButton"
        android:layout_toLeftOf="@+id/treatMeButton"
        android:layout_toStartOf="@+id/treatMeButton"
        android:layout_marginBottom="15dp"
        android:id="@+id/sprinkleCcheckBox1" />

    <CheckBox
        android:text="@string/hotfudge_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sprinkleCcheckBox1"
        android:layout_toRightOf="@+id/sprinkleCcheckBox1"
        android:layout_toEndOf="@+id/sprinkleCcheckBox1"
        android:id="@+id/hotfudgeCheckBox2" />

    <CheckBox
        android:text="@string/nuts_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/hotfudgeCheckBox2"
        android:layout_toRightOf="@+id/iceCreamImageView"
        android:layout_toEndOf="@+id/iceCreamImageView"
        android:id="@+id/nutsCheckBox3" />

    <!--Find Ice Cream-->
    <Button
        android:text="@string/findtreat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/findTreatButton" />

</RelativeLayout>
